--- a/styleOfGame.css
+++ b/styleOfGame.css
@@ -5,10 +5,26 @@ h1 a{
 
 #backgroundOfGame{
     background-image: linear-gradient(45deg,rgb(27, 115, 192),rgb(27, 192, 167));
+    padding: 10px 0px;
 }
 
 .transparent-white{
     background-image: linear-gradient(45deg,rgba(255, 255, 255, 0.256),rgba(255, 255, 255, 0.732));
+    color: white;
+}
+
+.card-group>.card{
+    background-image: linear-gradient(45deg,rgba(255, 255, 255, 0.256),rgba(255, 255, 255, 0.732));
+    background-color: transparent;
     border: white solid 1px;
     color: white;
+}
+
+.card :nth-child(1){
+    height: 100px;
+    width: auto;
+}
+
+#scissors-img{
+    transform: scale(50%);
 }
