--- a/styleOfGame.css
+++ b/styleOfGame.css
@@ -13,6 +13,11 @@ h1 a{
     color: white;
 }
 
+.transparent-black{
+    background-color: rgba(32, 31, 31, 0.855);
+    color: white;
+}
+
 .card-group>.card{
     background-image: linear-gradient(45deg,rgba(255, 255, 255, 0.256),rgba(255, 255, 255, 0.732));
     background-color: transparent;
@@ -37,4 +42,14 @@ main *{
 .choicesOfRound{
     flex-direction: row;
     justify-content: space-evenly;
+}
+
+#start-chooseNbrRound{
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: ;
 }
