--- a/styleOfGame.css
+++ b/styleOfGame.css
@@ -51,4 +51,7 @@ main *{
     top: 0;
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
