--- a/styleOfGame.css
+++ b/styleOfGame.css
@@ -31,6 +31,10 @@ h1 a{
     width: auto;
 }
 
+.card div>*{
+    width: 100%;
+}
+
 #scissors-img{
     transform: scale(50%);
 }
@@ -54,4 +58,14 @@ main *{
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    z-index: 1;
 }
