--- a/styleOfGame.css
+++ b/styleOfGame.css
@@ -22,8 +22,6 @@ h1 a{
     background-image: linear-gradient(45deg,rgba(255, 255, 255, 0.256),rgba(255, 255, 255, 0.732));
     background-color: transparent;
     border: white solid 1px;
-    color: white;
-    text-align: center;
 }
 
 .card :nth-last-child(1){
@@ -31,8 +29,13 @@ h1 a{
     width: auto;
 }
 
+.card-body{
+    --bs-card-color: white;
+}
+
 .card div>*{
     width: 100%;
+    height: auto;
 }
 
 #scissors-img{
@@ -80,4 +83,5 @@ main *{
     width: 3em;
     text-align: center;
     margin: 5px;
+    --bs-btn-border-color: white;
 }
