--- a/styleOfGame.css
+++ b/styleOfGame.css
@@ -3,6 +3,11 @@ h1 a{
     color: black;
 }
 
+h3{
+    color: white;
+    -webkit-text-stroke: .5px black;
+}
+
 #backgroundOfGame{
     background-image: linear-gradient(45deg,rgb(27, 115, 192),rgb(27, 192, 167));
     padding: 10px 0px;
@@ -16,6 +21,10 @@ h1 a{
 .transparent-black{
     background-color: rgba(32, 31, 31, 0.855);
     color: white;
+}
+
+.card-group{
+    width: 80%;
 }
 
 .card-group>.card{
