--- a/styleOfGame.css
+++ b/styleOfGame.css
@@ -3,7 +3,7 @@ h1 a{
     color: black;
 }
 
-h2, .feedbackRound{
+h2{
     width: 100%;
     padding: 10px 0px;
 }
@@ -100,7 +100,9 @@ main *{
 .choicesOfRound{
     display: grid;
     grid-template-areas: 
-        "computer choiceC" "player choiceP";
+        "computer choiceC" 
+        "player choiceP"
+        "feedback feedback";
     gap: 10px;
     color: white;
 }
@@ -121,7 +123,13 @@ main *{
     grid-area: choiceP;
 }
 
+.feedbackRound{
+    grid-area: feedback;
+    text-align: center;
+    border: white solid .5px;
+}
+
 #mainGameplay{
-    justify-content: space-between;
     height: 100%;
+    justify-content: space-between;
 }
