grid fixed width

--- a/styleOfGame.css
+++ b/styleOfGame.css
@@ -104,6 +104,7 @@ main *{
         "player choiceP"
         "feedback feedback";
     gap: 10px;
+    grid-template-columns: 100px 100px;
     color: white;
 }
 
