--- a/styleOfGame.css
+++ b/styleOfGame.css
@@ -16,6 +16,9 @@ h3{
 #backgroundOfGame{
     background-image: linear-gradient(45deg,rgb(27, 115, 192),rgb(27, 192, 167));
     padding: 10px 0px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .transparent-white{
@@ -24,7 +27,7 @@ h3{
 }
 
 .transparent-black{
-    background-color: rgba(32, 31, 31, 0.855);
+    background-color: rgba(32, 31, 31, 0.95);
     color: white;
 }
 
@@ -133,4 +136,9 @@ main *{
 #mainGameplay{
     height: 100%;
     justify-content: space-between;
+}
+
+.finalFeedback, .congrats{
+    background-color: rgb(94, 203, 241);
+    color: white;
 }
