--- a/styleOfGame.css
+++ b/styleOfGame.css
@@ -135,7 +135,7 @@ main *{
 
 #mainGameplay{
     height: 100%;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .finalFeedback, .congrats{
