--- a/styleOfGame.css
+++ b/styleOfGame.css
@@ -39,6 +39,7 @@ h3{
     background-image: linear-gradient(45deg,rgba(255, 255, 255, 0.256),rgba(255, 255, 255, 0.732));
     background-color: transparent;
     border: white solid 1px;
+    cursor: pointer;
 }
 
 .card :nth-last-child(1){
