--- a/styleOfGame.css
+++ b/styleOfGame.css
@@ -13,6 +13,10 @@ h3{
     -webkit-text-stroke: .5px black;
 }
 
+.counter-rounds::after{
+    content: ' 0';
+}
+
 #backgroundOfGame{
     background-image: linear-gradient(45deg,rgb(27, 115, 192),rgb(27, 192, 167));
     padding: 10px 0px;
