--- a/styleOfGame.css
+++ b/styleOfGame.css
@@ -137,6 +137,7 @@ main *{
     grid-area: feedback;
     text-align: center;
     border: white solid .5px;
+    visibility: hidden;
 }
 
 #mainGameplay{
