--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ main>*{
     --bs-btn-border-color: rgb(255, 255, 255);
 }
 
+#button-startGame:hover, #button-howToPlay:hover{
+    transform: rotate(-10deg);
+}
+
 #button-startGame a{
     color: white;
     text-decoration: none;
